# monitores_etl

./: .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
monitores_etl/dashboard/: app.py  utils.py
monitores_etl/extraction/extraction/: settings.py
monitores_etl/extraction/extraction/spiders/: monitor.py
monitores_etl/transformLoad/: data_manager.py  main.py
tests/: conftest.py  test_dashboard.py  test_dashboard_utils.py  test_data_manager.py  test_monitor_spider.py  test_transform_main.py
tests/html_samples/: default_page.html
tests/mock_data/: raw_data.json  transformed_data.db
