[project]
name = "monitores-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "marcosdrey",email = "programmarcos05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'N', 'PL', 'PT', 'PD', 'AIR']
